--- a/your-code.css
+++ b/your-code.css
@@ -5,10 +5,14 @@
     width: auto;
     margin-left: 300px;
     /* Your code here */
+   transition: transform 1s ease-in-out ;
+   
 }
-
-/* Create rocket hover animation here
-
+    
+/* Create rocket hover animation here */
+    .rocket_svg:hover{
+        transform: rotate(250deg);
+    }
 
 /* ===== Problem 2 ===== */
 
@@ -16,9 +20,12 @@
     height: 200px;
     width: auto;
     margin-left: 200px;
+    transition: transform 1s ease-in-out;
     /* Your code here */
 }
-
+.astronaut_svg:hover {
+    transform: translate(100px);
+}
 /* Create astronaut hover animation here
 
 /* ======= BONUS ======= */
@@ -27,9 +34,16 @@
     height: 200px;
     width: auto;
     margin-left: 300px;
-    /* Your animation here
+    animation: spin 2s linear infinite  ;
+
 }
 
 @keyframes spin {
-    /* Set up your keyframe animation here
+from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
 }
